# simplife

./: .gitignore  Cargo.toml  README.md
.github/workflows/: docker-image.yml
account-service/: Cargo.toml  Dockerfile  README.md  build.rs
account-service/src/: app_state.rs  main.rs
account-service/src/cache/: mod.rs  session.rs  user.rs
account-service/src/config/: mod.rs
account-service/src/db/: mod.rs  user.rs
account-service/src/dto/: error.rs  login.rs
account-service/src/service/: login.rs  mod.rs  user.rs
agenda-service/: Cargo.toml  Dockerfile  README.md  build.rs
agenda-service/src/: main.rs
agenda-service/src/cache/: ledger.rs  schedule.rs
agenda-service/src/config/: mod.rs
agenda-service/src/db/: agenda.rs  ledger.rs  mod.rs  schedule.rs
agenda-service/src/dto/: agenda.rs  error.rs  mod.rs  schedule.rs
agenda-service/src/handler/grpc/: mod.rs
agenda-service/src/handler/http/: mod.rs  schedule.rs
agenda-service/src/service/: agenda.rs  mod.rs  schedule.rs
agenda-service/src/service/grpc/: client.rs  mod.rs  proto.rs
agenda-service/src/strings/: mod.rs
akasha/: Cargo.toml
akasha/src/: app.rs  grpc.rs  lib.rs  multiplex_service.rs  proto.rs
akasha/src/context/: mod.rs
akasha/src/crypto/: mod.rs
akasha/src/db/: instrumentation.rs  mod.rs
akasha/src/dto/: response.rs
akasha/src/error/: mod.rs
akasha/src/log/: mod.rs
akasha/src/middleware/: context.rs  login_check.rs  mod.rs  trace.rs
akasha/src/redis/: instrumentation.rs  mod.rs
akasha/src/request/: mod.rs
akasha/src/request/part/: request_context.rs
akasha/src/time/: mod.rs
grpc-client/: Cargo.toml
grpc-client/src/: account_service.rs  lib.rs
ledger-service/: Cargo.toml  Dockerfile  README.md  build.rs
ledger-service/src/: app_state.rs  main.rs
ledger-service/src/cache/: ledger.rs  mod.rs
ledger-service/src/db/: cash.rs  ledger.rs  mod.rs
ledger-service/src/dto/: cash.rs  error.rs  ledger.rs  mod.rs
protos/account-service/: api.proto
protos/agenda-service/: api.proto
protos/ledger-service/: api.proto
service-template/: Cargo.toml  build.rs
service-template/src/: app_state.rs  main.rs
(+21 files in other folders)
