[package]
name = "akasha"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build = "0.9.2"

[dependencies]
serde = {version = "1.0", features = ["derive"] }
axum = "0.6.18"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
prost = "0.11"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.9" }
tonic-reflection = "0.9"
tower = { version = "0.4", features = ["full"] }
http = "0.2.9"
sha3 = "0.10.8"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
chrono = { version = "0.4.26", features = ["serde"] }
log = "0.4"
log4rs = "1.1.1"
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.18.0", features = ["rt-tokio"] }
serde_json = "1.0.103"
tracing = "0.1.37"
redis = "0.23.2"

