[package]
name = "grpc-client"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build = "0.9.2"

[dependencies]
akasha = { path = "../akasha" }
account-service = { path = "../account-service" }
prost = "0.11.9"
tonic = { version = "0.9" }
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }

